niivue-browser/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: niivue-browser
  labels:
    app.kubernetes.io/name: niivue-browser
  annotations:
    kubernetes.io/description: "Demo of the niivue-browser project. https://github.com/FNNDSC/niivue-browser"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: niivue-browser
  template:
    metadata:
      labels:
        app.kubernetes.io/name: niivue-browser
      annotations:
        prometheus.io/scrape: 'true'
        prometheus.io/path: '/metrics'
        prometheus.io/port: '2019'
    spec:
      containers:
      - name: niivue-browser
        image: ghcr.io/fnndsc/niivue-browser:latest
        imagePullPolicy: Always
        resources:
          limits:
            cpu: 500m
            memory: 1Gi
          requests:
            cpu: 500m
            memory: 1Gi
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
        - name: caddy
          containerPort: 2019
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /index.html
            port: http
          initialDelaySeconds: 3
          periodSeconds: 3
        volumeMounts:
        - name: data
          mountPath: /data
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: niivue-browser-data
      terminationGracePeriodSeconds: 10
