niivue-browser/services.yml
apiVersion: v1
kind: Service
metadata:
  name: niivue-browser
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: niivue-browser
  ports:
  - name: http
    port: 8080
    targetPort: 8080
    protocol: TCP
